package LLD.FlightReservation;

public enum Role {
    PILOT,
    CO_PILOT,
    CABIN_CREW
}
